Commit za tekucu nedelju
Dodao sam manja sredjivanja i brisanje cvorova,
Dodao sam crtanje siluete(Nisam znao da ima QSlider stavicu to nekako sam sa gradientom napravio za sad),
Dodao sam prikaz preciznosti i matrice konfuzije (trenutno samo za knn cvor posto ne radi funkcija iz nekog razlog),
Nacrtao ikonice za nove cvorove(Qt nesto ne podrzava najbolje svg fajlove strele i font se ne prikazuje uvek).

--- a/Raccoon/resources.qrc
+++ b/Raccoon/resources.qrc
@@ -28,5 +28,7 @@
         <file>Resources/Node_icons/trash_panda.svg</file>
         <file>Resources/Action_icons/add_file.svg</file>
         <file>Resources/Action_icons/stop_sign.svg</file>
+        <file>Resources/Node_icons/doc_reader.svg</file>
+        <file>Resources/Node_icons/tf_idf.svg</file>
     </qresource>
 </RCC>
