--- a/Raccoon/mainwindow.ui
+++ b/Raccoon/mainwindow.ui
@@ -98,6 +98,11 @@ color:red
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionNew_Scene"/>
+    <addaction name="actionOpen_Scene"/>
+    <addaction name="separator"/>
+    <addaction name="actionSave_2"/>
+    <addaction name="actionSave_As"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
@@ -1234,6 +1239,26 @@ color:red
    </property>
    <property name="toolTip">
     <string>Transform super node to base components</string>
+   </property>
+  </action>
+  <action name="actionNew_Scene">
+   <property name="text">
+    <string>New Scene</string>
+   </property>
+  </action>
+  <action name="actionOpen_Scene">
+   <property name="text">
+    <string>Open Scene</string>
+   </property>
+  </action>
+  <action name="actionSave_2">
+   <property name="text">
+    <string>Save</string>
+   </property>
+  </action>
+  <action name="actionSave_As">
+   <property name="text">
+    <string>Save As</string>
    </property>
   </action>
  </widget>
