dodao apriori cvor i algoritam
Dodao sam apriori mogucnosti u program nameravam dodati kontrole u preview prozoru tipa filtriranje itd

--- a/Raccoon/resources.qrc
+++ b/Raccoon/resources.qrc
@@ -31,5 +31,6 @@
         <file>Resources/Node_icons/doc_reader.svg</file>
         <file>Resources/Node_icons/tf_idf.svg</file>
         <file>Resources/Action_icons/minus.svg</file>
+        <file>Resources/Node_icons/apriori.svg</file>
     </qresource>
 </RCC>
