--- a/Raccoon/mainwindow.ui
+++ b/Raccoon/mainwindow.ui
@@ -236,9 +236,9 @@ color:red
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>0</y>
+          <y>-997</y>
           <width>120</width>
-          <height>1768</height>
+          <height>1863</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -1150,6 +1150,63 @@ color:red
            <property name="icon">
             <iconset resource="resources.qrc">
              <normaloff>:/res/Resources/Node_icons/bayes.svg</normaloff>:/res/Resources/Node_icons/bayes.svg</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>64</width>
+             <height>64</height>
+            </size>
+           </property>
+           <property name="checkable">
+            <bool>false</bool>
+           </property>
+           <property name="popupMode">
+            <enum>QToolButton::DelayedPopup</enum>
+           </property>
+           <property name="toolButtonStyle">
+            <enum>Qt::ToolButtonTextUnderIcon</enum>
+           </property>
+           <property name="autoRaise">
+            <bool>true</bool>
+           </property>
+           <property name="arrowType">
+            <enum>Qt::NoArrow</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="Line" name="line_5">
+           <property name="frameShadow">
+            <enum>QFrame::Plain</enum>
+           </property>
+           <property name="lineWidth">
+            <number>1</number>
+           </property>
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QToolButton" name="apriori_button">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>80</width>
+             <height>80</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Apriori</string>
+           </property>
+           <property name="icon">
+            <iconset resource="resources.qrc">
+             <normaloff>:/res/Resources/Node_icons/apriori.svg</normaloff>:/res/Resources/Node_icons/apriori.svg</iconset>
            </property>
            <property name="iconSize">
             <size>
