--- a/Raccoon/mainwindow.ui
+++ b/Raccoon/mainwindow.ui
@@ -108,11 +108,8 @@ color:red
     <property name="title">
      <string>Edit</string>
     </property>
-   </widget>
-   <widget class="QMenu" name="menuView">
-    <property name="title">
-     <string>View</string>
-    </property>
+    <addaction name="actionUndo"/>
+    <addaction name="actionRedo"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="styleSheet">
@@ -124,7 +121,6 @@ color:red
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
-   <addaction name="menuView"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -304,7 +300,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/doc_reader.svg</normaloff>:/res/Resources/Node_icons/doc_reader.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/doc_reader.png</normaloff>:/res/Resources/Node_icons/doc_reader.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -361,7 +357,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/stats.svg</normaloff>:/res/Resources/Node_icons/stats.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/stats.png</normaloff>:/res/Resources/Node_icons/stats.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -405,7 +401,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/table_output.svg</normaloff>:/res/Resources/Node_icons/table_output.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/table_output.png</normaloff>:/res/Resources/Node_icons/table_output.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -449,7 +445,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/plot.svg</normaloff>:/res/Resources/Node_icons/plot.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/plot.png</normaloff>:/res/Resources/Node_icons/plot.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -506,7 +502,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/filter.svg</normaloff>:/res/Resources/Node_icons/filter.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/filter.png</normaloff>:/res/Resources/Node_icons/filter.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -550,7 +546,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/tf_idf.svg</normaloff>:/res/Resources/Node_icons/tf_idf.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/tf_idf.png</normaloff>:/res/Resources/Node_icons/tf_idf.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -594,7 +590,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/normalization.svg</normaloff>:/res/Resources/Node_icons/normalization.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/normalization.png</normaloff>:/res/Resources/Node_icons/normalization.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -638,7 +634,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/standardization.svg</normaloff>:/res/Resources/Node_icons/standardization.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/standardization.png</normaloff>:/res/Resources/Node_icons/standardization.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -682,7 +678,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/aproximation.svg</normaloff>:/res/Resources/Node_icons/aproximation.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/aproximation.png</normaloff>:/res/Resources/Node_icons/aproximation.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -726,7 +722,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/partition.svg</normaloff>:/res/Resources/Node_icons/partition.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/partition.png</normaloff>:/res/Resources/Node_icons/partition.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -770,7 +766,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/binning.svg</normaloff>:/res/Resources/Node_icons/binning.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/binning.png</normaloff>:/res/Resources/Node_icons/binning.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -814,7 +810,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/remove_na.svg</normaloff>:/res/Resources/Node_icons/remove_na.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/remove_na.png</normaloff>:/res/Resources/Node_icons/remove_na.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -858,7 +854,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/cat_to_num.svg</normaloff>:/res/Resources/Node_icons/cat_to_num.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/cat_to_num.png</normaloff>:/res/Resources/Node_icons/cat_to_num.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -915,7 +911,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/dbscan.svg</normaloff>:/res/Resources/Node_icons/dbscan.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/dbscan.png</normaloff>:/res/Resources/Node_icons/dbscan.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -959,7 +955,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/k_means.svg</normaloff>:/res/Resources/Node_icons/k_means.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/k_means.png</normaloff>:/res/Resources/Node_icons/k_means.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -1003,7 +999,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/aglo.svg</normaloff>:/res/Resources/Node_icons/aglo.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/aglo.png</normaloff>:/res/Resources/Node_icons/aglo.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -1060,7 +1056,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/tree.svg</normaloff>:/res/Resources/Node_icons/tree.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/tree.png</normaloff>:/res/Resources/Node_icons/tree.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -1104,7 +1100,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/knn.svg</normaloff>:/res/Resources/Node_icons/knn.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/knn.png</normaloff>:/res/Resources/Node_icons/knn.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -1148,7 +1144,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/bayes.svg</normaloff>:/res/Resources/Node_icons/bayes.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/bayes.png</normaloff>:/res/Resources/Node_icons/bayes.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -1205,7 +1201,7 @@ color:red
            </property>
            <property name="icon">
             <iconset resource="resources.qrc">
-             <normaloff>:/res/Resources/Node_icons/apriori.svg</normaloff>:/res/Resources/Node_icons/apriori.svg</iconset>
+             <normaloff>:/res/Resources/Node_icons/apriori.png</normaloff>:/res/Resources/Node_icons/apriori.png</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -1315,6 +1311,16 @@ color:red
   <action name="actionSave_As">
    <property name="text">
     <string>Save As</string>
+   </property>
+  </action>
+  <action name="actionUndo">
+   <property name="text">
+    <string>Undo</string>
+   </property>
+  </action>
+  <action name="actionRedo">
+   <property name="text">
+    <string>Redo</string>
    </property>
   </action>
  </widget>
